# byzantine-fault-raid

./: .clocignore  .gitignore  CMakeLists.txt  README.md  common.cmake  config.toml  run_clients.sh  run_servers.sh
cmake/: FetchContentExclude.cmake
include/: config.h  config.hh  data_storage.h  encode_decode.h  file.h  file.hh  reed_solomon.h  signature.h
patches/: grpc.patch  libcorrect.patch
protos/: filesys.proto
src/: BFRFileSystem.cc  BFRFileSystem.h  async_query.h  bytes.cc  bytes.h  config.cc  config.h  data_storage.cc  data_storage.h  data_storage_test.cc  encode_decode.cc  encode_decode.h  encode_test.cc  file.cc  file.h  filesys_client.cc  filesys_common.cc  filesys_common.h  filesys_server.cc  filesys_server_impl.cc  filesys_server_impl.h  reed_solomon.cc  reed_solomon.h  segment.cc  segment.h  signature.cc  signature.h
